--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Brandon Vlaar Dot Com
+name: Brandon Vlaar 🌎
 description: Thoughts about tech and environment.
 meta_description: "Thoughts about tech and environment"
 
