--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Brandon Vlaar 🌎
-description: Thoughts about tech and environment.
-meta_description: "Thoughts about tech and environment"
+description: Thoughts about technology and the environment.
+meta_description: "Thoughts about technology and the environment"
 
 markdown: kramdown
 highlighter: pygments
