--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Brandon Vlaar 🌎
+name: Brandon Vlaar
 description: Thoughts about technology and the environment.
 meta_description: "Thoughts about technology and the environment"
 
